erDiagram
  Notebook ||--o{ Cue : has
  Notebook ||--o{ NotebookTag : has
  Tag ||--o{ NotebookTag : has

  Notebook {
    string id PK
    string title
    datetime noteDate
    string sourceType
    string sourceTitle
    string body
    string summary
    datetime nextReviewDate
    datetime reviewedAt
    datetime createdAt
    datetime updatedAt
    datetime deletedAt
  }

  Cue {
    string id PK
    string notebookId FK
    string text
    int order
    datetime createdAt
    datetime updatedAt
  }

  Tag {
    string id PK
    string name UK
    string color
    datetime createdAt
  }

  NotebookTag {
    string notebookId PK
    string tagId PK
  }
